Open-source link added

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
 
 <p class="footer"> 
-Coded by
+<a href="https://www.github.com/Tiakacat/Tiakacat_WeatherApp/" target="_blank"> Open-source code</a> by
 <a href="https://www.instagram.com/tiakacat/" target="_blank">
 <strong>Kateryna Gulenok</strong>
 </a>
