Time and date added

--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
 <div class="dataContainer">
 <div class="myCity">
    <h2 id="city"></h2>
-   <h3 id="time"></h3>
+   <h3> <span id="time"></span></h3>
+   <h3> <span id="date"></span></h3>
 </div>   
   <div class="cityData">
    <h5><b>TEMPERATURE: <span id="temp-day">21</span>° /
     <span id="temp-night">15</span>°
      <a href="#" id="celcius-link">C</a> /
      <a href="#" id="fahrenheit-link">F</a></b></h5>
-    <p><img src="icons/temperature.png" width="40px"> </p> 
+    <p> <img src="icons/temperature.png" width="40px"></p> 
   </div>
   <div class="cityData">
     <h5> <b>SKY</b>:<br> <span id="sky"> </span></h5>
