new weather icons added

--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
   </div>
   <div class="cityData">
     <h5> <b>SKY</b>:<br> <span id="sky"> </span></h5>
-    <p>   <img src="icons/sun.gif" width="40px"> </p>
+    <p>   <img  id="icon-actual" src="icons/sun.gif" width="40px"> </p>
 </div>
 <div class="cityData">
     <h5> <b>WIND: </b>:<br> <span id="wind"></span> km/h</h5>
-    <img src="icons/wind.gif" width="40px">
+    <img src="icons/wind.png" width="40px">
   </div>
   <div class="cityData">
     <h5> <b>HUMIDITY: </b><br> <span id="precipation"></span>%</h5>
-    <img src="icons/humid.png" width="43px">
+    <img src="icons/droplets.png" width="43px">
 </div>
 </div>
       <div class="row">
