--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </div>
   <div class="cityData">
     <h5> <b>SKY</b>:<br> <span id="sky"> </span></h5>
-    <p>   <img  id="icon-actual" src="icons/sun.gif" width="40px"> </p>
+    <p>   <img  id="icon-actual" src="icons/01d.png" width="40px"> </p>
 </div>
 <div class="cityData">
     <h5> <b>WIND: </b>:<br> <span id="wind"></span> km/h</h5>
@@ -75,7 +75,7 @@
         <div class="col-2">
               <div class="card">
                 <h5> <b>Sunday</b></h5>
-                <img src="icons/thunder.png" class="card-img-top"/>
+                <img src="icons/02d.png" class="card-img-top"/>
                 <div class="card-body">
                   <p class="card-text"><b>25°C</b></p>
                 <a href="#" class="btn btn-info">Check it</a>
@@ -85,7 +85,7 @@
             <div class="col-2">
               <div class="card">
            <h5> <b>Monday</b></h5>
-<img src="icons/clouds.png" class="card-img-top" />
+<img src="icons/03d.png" class="card-img-top" />
                 <div class="card-body">
                   <p class="card-text"><b>18°C</b></p>
                   <a href="#" class="btn btn-info">Check it</a>
@@ -95,7 +95,7 @@
             <div class="col-2">
               <div class="card">
               <h5><b>Tuesday</b> </h5>
-<img src="icons/raining.png" class="card-img-top" />
+<img src="icons/11d.png" class="card-img-top" />
                 <div class="card-body">
                   <p class="card-text"><b>21°C</b></p>
                   <a href="#" class="btn btn-info">Check it</a>
@@ -105,7 +105,7 @@
   <div class="col-2">
             <div class="card">
             <h5><b>Wednesday</b></h5>
-            <img src="icons/sun.png" class="card-img-top" />
+            <img src="icons/01d.png" class="card-img-top" />
                 <div class="card-body">
                   <p class="card-text"><b>27°C</b></p>
                   <a href="#" class="btn btn-info">Check it</a>
@@ -115,7 +115,7 @@
             <div class="col-2">
               <div class="card">
               <h5><b>Thursday</b></h5>
-<img src="icons/sun_less_clouds.png" class="card-img-top" />
+<img src="icons/09d.png" class="card-img-top" />
                 <div class="card-body">
                   <p class="card-text"> <b>20°C</b></p>
                   <a href="#" class="btn btn-info">Check it</a>
@@ -125,7 +125,7 @@
             <div class="col-2">
               <div class="card">
               <h5><b>For 10 days</b> </h5>
-<img src="icons/sun_less_clouds.png" class="card-img-top" />
+<img src="icons/10d.png" class="card-img-top" />
                 <div class="card-body">
                   <p class="card-text"><b>?</b></p>
                   <a href="#" class="btn btn-info">Check it</a>
