weather icons display fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
   </div>
   <div class="cityData">
     <h5> <b>SKY</b>:<br> <span id="sky"> </span></h5>
-    <p>   <img  id="icon-actual" src="icons/01d.png" width="40px"> </p>
+    <p>   <img 
+      src="" 
+      id="icon-actual"  
+      alt="Clear" 
+      width="40px"> 
+    </p>
 </div>
 <div class="cityData">
     <h5> <b>WIND: </b>:<br> <span id="wind"></span> km/h</h5>
