new icons added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
    <h5><b>TEMPERATURE:</b> <br> <span id="temp-day">21</span> /
     <span id="temp-night">15</span>
      <a href="#" id="celcius-link" class="active">°C</a> /
-     <a href="#" id="fahrenheit-link" class="active">°F</a></h5>
+     <a href="#" id="fahrenheit-link" >°F</a></h5>
     <p> <img src="icons/temperature.png" width="40px"></p> 
   </div>
   <div class="cityData">
