--- a/index.html
+++ b/index.html
@@ -74,67 +74,73 @@
     <img src="icons/droplets.png" width="43px">
 </div>
 </div>
-      <div class="row">
-        <div class="col-2">
-              <div class="card">
-                <h5> <b>Sunday</b></h5>
-                <img src="icons/02d.png" class="card-img-top"/>
-                <div class="card-body">
-                  <p class="card-text"><b>25°C</b></p>
-                <a href="#" class="btn btn-info">Check it</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="card">
-           <h5> <b>Monday</b></h5>
+<div class="row">
+<div class="col-2">
+<div class="card" id="forecast">
+<h5> <b>Sunday</b></h5>
+<img src="icons/02d.png" class="card-img-top"/>
+<div class="card-body">
+<span class="forecast-temp-max"><b>18°/</b></span>
+<span class="forecast-temp-min"><b>12°C</b></span>
+<a href="#" class="btn btn-info">Check it</a>
+</div>
+</div>
+</div>
+<div class="col-2">
+<div class="card" id="forecast">
+<h5> <b>Monday</b></h5>
 <img src="icons/03d.png" class="card-img-top" />
-                <div class="card-body">
-                  <p class="card-text"><b>18°C</b></p>
-                  <a href="#" class="btn btn-info">Check it</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="card">
-              <h5><b>Tuesday</b> </h5>
+<div class="card-body">
+<span class="forecast-temp-max"><b>18°/</b></span>
+<span class="forecast-temp-min"><b>12°C</b></span>
+<a href="#" class="btn btn-info">Check it</a>
+</div>
+</div>
+</div>
+<div class="col-2">
+<div class="card" id="forecast">
+<h5><b>Tuesday</b> </h5>
 <img src="icons/11d.png" class="card-img-top" />
-                <div class="card-body">
-                  <p class="card-text"><b>21°C</b></p>
-                  <a href="#" class="btn btn-info">Check it</a>
-                </div>
-              </div>
-            </div>
-  <div class="col-2">
-            <div class="card">
-            <h5><b>Wednesday</b></h5>
-            <img src="icons/01d.png" class="card-img-top" />
-                <div class="card-body">
-                  <p class="card-text"><b>27°C</b></p>
-                  <a href="#" class="btn btn-info">Check it</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="card">
-              <h5><b>Thursday</b></h5>
+<div class="card-body">
+<span class="forecast-temp-max"><b>18°/</b></span>
+<span class="forecast-temp-min"><b>12°C</b></span>
+<a href="#" class="btn btn-info">Check it</a>
+</div>
+</div>
+</div>
+<div class="col-2">
+<div class="card" id="forecast">
+<h5><b>Wednesday</b></h5>
+<img src="icons/01d.png" class="card-img-top" />
+<div class="card-body">
+<span class="forecast-temp-max"><b>18°/</b></span>
+<span class="forecast-temp-min"><b>12°C</b></span>
+<a href="#" class="btn btn-info">Check it</a>
+</div>
+</div>
+</div>
+<div class="col-2">
+<div class="card" id="forecast">
+<h5><b>Thursday</b></h5>
 <img src="icons/09d.png" class="card-img-top" />
-                <div class="card-body">
-                  <p class="card-text"> <b>20°C</b></p>
-                  <a href="#" class="btn btn-info">Check it</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-2">
-              <div class="card">
-              <h5><b>For 10 days</b> </h5>
+<div class="card-body">
+<span class="forecast-temp-max"><b>18°/</b></span>
+<span class="forecast-temp-min"><b>12°C</b></span>
+<a href="#" class="btn btn-info">Check it</a>
+</div>
+</div>
+</div>
+<div class="col-2">
+<div class="card" id="forecast">
+<h5><b>For 10 days</b> </h5>
 <img src="icons/10d.png" class="card-img-top" />
-                <div class="card-body">
-                  <p class="card-text"><b>?</b></p>
-                  <a href="#" class="btn btn-info">Check it</a>
-                </div>
-              </div>
-            </div>
+<div class="card-body">
+<span class="forecast-temp-max"><b>18°/</b></span>
+<span class="forecast-temp-min"><b>12°C</b></span>
+<a href="#" class="btn btn-info">Check it</a>
+</div>
+</div>
+</div>
 
 <p class="footer"> 
 <a href="https://www.github.com/Tiakacat/Tiakacat_WeatherApp/" target="_blank"> Open-source code</a> by
