--- a/index.html
+++ b/index.html
@@ -74,19 +74,26 @@
     <img src="icons/droplets.png" width="43px">
 </div>
 </div>
+<div class="weather-forecast" id="forecast"
 <div class="row">
 <div class="col-2">
-<div class="card" id="forecast">
-<h5> <b>Sunday</b></h5>
-<img src="icons/02d.png" class="card-img-top"/>
-<div class="card-body">
+<div class="card">
+<div class = "forecast-day"> <b>Sunday</b></div>
+<img 
+src="icons/02d.png" 
+alt=""
+class="card-img-top"
+/>
+<div class="forecast-temp">
 <span class="forecast-temp-max"><b>18°/</b></span>
 <span class="forecast-temp-min"><b>12°C</b></span>
-<a href="#" class="btn btn-info">Check it</a>
 </div>
 </div>
 </div>
-<div class="col-2">
+</div>
+</div>
+
+<!-- <div class="col-2">
 <div class="card" id="forecast">
 <h5> <b>Monday</b></h5>
 <img src="icons/03d.png" class="card-img-top" />
@@ -140,7 +147,7 @@
 <a href="#" class="btn btn-info">Check it</a>
 </div>
 </div>
-</div>
+</div> -->
 
 <p class="footer"> 
 <a href="https://www.github.com/Tiakacat/Tiakacat_WeatherApp/" target="_blank"> Open-source code</a> by
