forecast display changed

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
     <img src="icons/droplets.png" width="43px">
 </div>
 </div>
-<div class="weather-forecast" id="forecast"
+<div class="weather-forecast" id="forecast">
 <div class="row">
 <div class="col-2">
 <div class="card">
-<div class = "forecast-day"> <b>Sunday</b></div>
+<div class = "forecast-date"> <b>Sunday</b></div>
 <img 
 src="icons/02d.png" 
 alt=""
-class="card-img-top"
+class="card-img-top" id="iconForecast"
 />
 <div class="forecast-temp">
 <span class="forecast-temp-max"><b>18°/</b></span>
