css for actual weather changed

--- a/index.html
+++ b/index.html
@@ -45,11 +45,15 @@
       </form>
 <img src="images/window.jpeg" alt="window view" width="580px" class="main-image"/>
 <br>
+
+  
 <div class="dataContainer">
 <div class="myCity">
    <h2 id="city"></h2>
    <h3> <span id="date"></span></h3>
 </div>   
+<div class="row">
+<div class="col-6">
   <div class="cityData">
    <h5><b>TEMPERATURE:</b> <br> <span id="temp-day">21</span> /
     <span id="temp-night">15</span>
@@ -57,6 +61,8 @@
      <a href="#" id="fahrenheit-link" >°F</a></h5>
     <p> <img src="icons/temperature.png" width="40px"></p> 
   </div>
+  </div>
+  <div class="col-6">
   <div class="cityData">
     <h5> <b>SKY</b>:<br> <span id="sky"> </span></h5>
     <p>   <img 
@@ -65,15 +71,24 @@
       alt="Clear" 
       width="40px"> </p>
 </div>
+</div>
+</div>
+<div class="row">
+ <div class="col-6">
 <div class="cityData">
     <h5> <b>WIND: </b>:<br> <span id="wind"></span> km/h</h5>
     <img src="icons/wind.png" width="40px">
   </div>
+  </div>
+  <div class="col-6">
   <div class="cityData">
     <h5> <b>HUMIDITY: </b><br> <span id="precipation"></span>%</h5>
     <img src="icons/droplets.png" width="43px">
 </div>
 </div>
+</div>
+</div>
+
 <div class="weather-forecast" id="forecast">
 <div class="row">
 <div class="col-2">
