--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@
           <div class="col-6">
             <div class="cityData">
               <h5>
-                <b>TEMPERATURE:</b> <br />
+                <b>TEMP:</b> <br />
                 <span id="temp-day">21</span> /
                 <span id="temp-night">15</span>
                 <a href="#" id="celcius-link" class="active">°C</a> /
                 <a href="#" id="fahrenheit-link">°F</a>
               </h5>
-              <p><img src="icons/temperature.png" width="40px" /></p>
             </div>
           </div>
           <div class="col-6">
@@ -88,7 +87,7 @@
                 <b>SKY</b>:<br />
                 <span id="sky"> </span>
               </h5>
-              <p><img src="" id="icon-actual" alt="Clear" width="40px" /></p>
+              <p><img src="" id="icon-actual" alt="Clear" width="50px" /></p>
             </div>
           </div>
         </div>
@@ -99,16 +98,16 @@
                 <b>WIND: </b>:<br />
                 <span id="wind"></span> km/h
               </h5>
-              <img src="icons/wind.png" width="40px" />
+              <img src="icons/wind.png" width="50px" />
             </div>
           </div>
           <div class="col-6">
             <div class="cityData">
               <h5>
-                <b>HUMIDITY: </b><br />
+                <b>HUMI: </b><br />
                 <span id="precipation"></span>%
               </h5>
-              <img src="icons/droplets.png" width="43px" />
+              <img src="icons/droplets.png" width="50px" />
             </div>
           </div>
         </div>
@@ -127,7 +126,7 @@
               />
               <div class="forecast-temp">
                 <span class="forecast-temp-max"><b>18°/</b></span>
-                <span class="forecast-temp-min"><b>12°C</b></span>
+                <span class="forecast-temp-min"><b>12°</b></span>
               </div>
             </div>
           </div>
