final style adjustments made

--- a/index.html
+++ b/index.html
@@ -201,6 +201,14 @@
         <a href="https://www.instagram.com/tiakacat/" target="_blank">
           <strong>Kateryna Gulenok</strong>
         </a>
+        <br />
+        Weather icons by
+        <a
+          href="https://www.flaticon.com/free-icons/weather"
+          title="weather icons"
+          target="_blank"
+          >juicy_fish - Flaticon</a
+        >
       </p>
     </div>
 
