attempts to fix convertion

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
               <h4><b>TEMP:</b> <br />day/night</h4>
               <span id="temp-day">21</span>/<span id="temp-night">15</span>
               <div class="square">
-                <span class="celcius" id="celcius-link">°C</span>
-                <span class="fahrenheit" id="fahrenheit-link">°F</span>
+                <a href="#" class="active" id="celcius-link">°C</a>
+                <a href="#" id="fahrenheit-link">°F</a>
               </div>
               <!-- <a href="#" id="celcius-link" class="active">°C</a> /
                 <a href="#" id="fahrenheit-link">°F</a> -->
@@ -133,62 +133,6 @@
           </div>
         </div>
       </div>
-
-      <!-- <div class="col-2">
-<div class="card" id="forecast">
-<h5> <b>Monday</b></h5>
-<img src="icons/03d.png" class="card-img-top" />
-<div class="card-body">
-<span class="forecast-temp-max"><b>18°/</b></span>
-<span class="forecast-temp-min"><b>12°C</b></span>
-<a href="#" class="btn btn-info">Check it</a>
-</div>
-</div>
-</div>
-<div class="col-2">
-<div class="card" id="forecast">
-<h5><b>Tuesday</b> </h5>
-<img src="icons/11d.png" class="card-img-top" />
-<div class="card-body">
-<span class="forecast-temp-max"><b>18°/</b></span>
-<span class="forecast-temp-min"><b>12°C</b></span>
-<a href="#" class="btn btn-info">Check it</a>
-</div>
-</div>
-</div>
-<div class="col-2">
-<div class="card" id="forecast">
-<h5><b>Wednesday</b></h5>
-<img src="icons/01d.png" class="card-img-top" />
-<div class="card-body">
-<span class="forecast-temp-max"><b>18°/</b></span>
-<span class="forecast-temp-min"><b>12°C</b></span>
-<a href="#" class="btn btn-info">Check it</a>
-</div>
-</div>
-</div>
-<div class="col-2">
-<div class="card" id="forecast">
-<h5><b>Thursday</b></h5>
-<img src="icons/09d.png" class="card-img-top" />
-<div class="card-body">
-<span class="forecast-temp-max"><b>18°/</b></span>
-<span class="forecast-temp-min"><b>12°C</b></span>
-<a href="#" class="btn btn-info">Check it</a>
-</div>
-</div>
-</div>
-<div class="col-2">
-<div class="card" id="forecast">
-<h5><b>For 10 days</b> </h5>
-<img src="icons/10d.png" class="card-img-top" />
-<div class="card-body">
-<span class="forecast-temp-max"><b>18°/</b></span>
-<span class="forecast-temp-min"><b>12°C</b></span>
-<a href="#" class="btn btn-info">Check it</a>
-</div>
-</div>
-</div> -->
 
       <p class="footer">
         <a
