element size adjusted

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <b>SKY</b>:<br />
                 <span id="sky"> </span>
               </h4>
-              <p><img src="" id="icon-actual" alt="Clear" width="60px" /></p>
+              <img src="" id="icon-actual" alt="Clear" width="60px" />
             </div>
           </div>
         </div>
