convertion css fixed

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="cityData">
               <h4><b>TEMP:</b> <br />day/night</h4>
               <span id="temp-day">21</span>/<span id="temp-night">15</span>
-              <div class="square">
-                <a href="#" class="active" id="celcius-link">°C</a>
+              <div class="units">
+                <a href="#" id="celcius-link" class="active">°C</a>
                 <a href="#" id="fahrenheit-link">°F</a>
               </div>
               <!-- <a href="#" id="celcius-link" class="active">°C</a> /
